# GerBiC

./: .gitignore  README.md
GerBiC/: CMake_dir.txt  Gerbic.c  Gerenciador  Gerenciador.c  README.md
libs/acharTexto/include/: acharTexto.h
libs/acharTexto/src/: lib.c
libs/argumentos/: CMakeLists.txt
libs/argumentos/include/: argumentos.h
libs/argumentos/src/: lib.c
libs/arquivo_handler/: CMakeLists.txt
libs/arquivo_handler/include/: arquivo_handler.h
libs/arquivo_handler/src/: lib.c
libs/buffer/include/: buffer.h
libs/buffer/src/: lib.c
libs/buffer_concatenar/include/: buffer_concatenar.h
libs/buffer_concatenar/src/: lib.c
libs/buffer_input/include/: buffer_input.h
libs/buffer_input/src/: lib.c
libs/capitalizacao_ascii/include/: capitalizacao_ascii.h
libs/capitalizacao_ascii/src/: lib.c
libs/compararTexto/include/: compararTexto.h
libs/compararTexto/src/: lib.c
libs/comparar_chars/include/: comparar_chars.h
libs/comparar_chars/src/: lib.c
libs/concatenar_em_buffer/: CMakeLists.txt
libs/concatenar_em_buffer/include/: concatenar_em_buffer.h
libs/concatenar_em_buffer/src/: lib.c
libs/copiar_em_buffer/include/: copiar_em_buffer.h
libs/copiar_em_buffer/src/: lib.c
libs/destrutor_handler/include/: destrutor_handler.h
libs/destrutor_handler/src/: lib.c
libs/erro_handler/: CMakeLists.txt
libs/erro_handler/include/: erro_handler.h
libs/erro_handler/libs/erro_log/include/: erro_log.h
libs/erro_handler/libs/erro_log/src/: lib.c
libs/erro_handler/libs/erro_terminal/include/: erro_terminal.h
libs/erro_handler/libs/erro_terminal/src/: lib.c
libs/erro_handler/src/: lib.c
libs/inverterTexto/include/: inverterTexto.h
libs/inverterTexto/src/: lib.c
libs/memoria_verificador/: CMakeLists.txt
libs/memoria_verificador/include/: memoria_verificador.h
libs/memoria_verificador/src/: lib.c
libs/relatorio/: CMakeLists.txt
libs/relatorio/include/: relatorio.h
libs/relatorio/src/: lib.c
libs/size_t_paraTexto/: CMakeLists.txt
libs/size_t_paraTexto/include/: size_t_paraTexto.h
libs/size_t_paraTexto/src/: lib.c
libs/substituirTexto/: CMakeLists.txt
libs/substituirTexto/include/: substituirTexto.h
libs/substituirTexto/src/: lib.c
libs/tamanhoTexto/include/: tamanhoTexto.h
libs/tamanhoTexto/src/: lib.c
libs/tamanho_chars/: CMakeLists.txt
libs/tamanho_chars/include/: tamanho_chars.h
libs/tamanho_chars/src/: lib.c
libs_para_refazer/int_para_chars/include/: int_para_chars.h
libs_para_refazer/int_para_chars/src/: lib.c
libs_para_refazer/lista_em_vetor/include/: lista_em_vetor.h
libs_para_refazer/lista_em_vetor/src/: lib.c
src/: main.c
